<resources>
    <string name="app_name">Todo App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="place_holder">Place Holder</string>
    <string name="checkbox">CheckBox</string>
    <string name="save">Save</string>
    <string name="description">Description</string>
    <string name="name">Name</string>
    <string name="new_task">New Task</string>
    <string name="select_date_time">Select Date and Time</string>
</resources>